# steambridge

./: .gitignore  LICENSE.md  README.md  app.go  go.mod  go.sum  main.go  wails.json
.github/workflows/: main.yml
cbridge/: CMakeLists.txt  build.bat  build.sh  steam_bridge.cpp  steam_bridge.h
cmd/app/: main.go
cmd/steambridge/: main.go
cmd/taptest/: main.go
frontend/: .gitignore  package-lock.json  package.json  package.json.md5
frontend/pages/: index.module.css  index.tsx
frontend/wailsjs/wailsjs/go/main/: App.d.ts  App.js  mock.ts
internal/dpi/: inspector.go  inspector_test.go
internal/facade/: steambridge_facade.go
internal/ipam/: pool.go
internal/protocol/: protocol.go
internal/router/: router.go  table.go
internal/steam/: bridge.go  bridge_linux.go  bridge_windows.go  client.go  client_linux.go  client_windows.go
internal/switchboard/: mac_table.go  mac_table_test.go  router.go
internal/tap/: device.go  device_linux.go  device_test.go  device_windows.go
internal/tun/: device.go  device_linux.go  device_test.go  device_windows.go
internal/utils/: utils.go
scripts/: build-windows.bat  setup_bridge.sh
